<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--借书逾期名单-->
                <LinearLayout
                    android:id="@+id/ll_student_info"
                    style="@style/MenuItemAverageStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vector_student_info" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="7dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_text_student_info" />

                </LinearLayout>
                <!--借书逾期名单-->
                <LinearLayout
                    android:id="@+id/ll_borrow_record"
                    style="@style/MenuItemAverageStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vector_borrow_record" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="7dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_text_borrow_record" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_exit_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="40dp"
            android:text="@string/exit_login"
            android:textColor="@android:color/white"
            android:theme="@style/AutoButton" />
    </LinearLayout>
</layout>