<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bg_login" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="65dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_green_stroke"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_username" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_username_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_green_stroke"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_password" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_password_hint"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:theme="@style/AutoButton" />

        </LinearLayout>
    </ScrollView>

</layout>